--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ p, .p {
     margin-top:18px;
     color:#3ec1d5
 }
-    </style>
+</style>
 
 
 
@@ -210,6 +210,7 @@ p, .p {
                 <!-- Brand -->
                 <a class="navbar-brand page-scroll sticky-logo" href="index.html">
                   <h1><span>NM</span>TSS</h1>
+
                   <!-- Uncomment below if you prefer to use an image logo -->
                   <!-- <img src="img/logo.png" alt="" title=""> -->
                 </a>
@@ -233,11 +234,11 @@ p, .p {
                     <a class="page-scroll" href="#team">Equipa</a>
                   </li>
                   <li>
-                    <a class="page-scroll" href="#portfolio">Portfolio</a>
+                    <a class="page-scroll" href="#portfolio">Portfólio</a>
                   </li>
 
                   <li>
-                    <a class="page-scroll" href="#contact">Contactos</a>
+                    <a class="page-scroll" href="#contact">Contatos</a>
                   </li>
                 </ul>
               </div>
@@ -294,16 +295,16 @@ p, .p {
               <div class="slider-content text-center">
                 <!-- layer 1 -->
                 <div class="layer-1-1 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
-                  <h2 class="title1">Servicos de alta qualidade</h2>
+                  <h2 class="title1">Serviços de alta qualidade</h2>
                 </div>
                 <!-- layer 2 -->
                 <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                  <h1 class="title2">Criando soluções inovadoras e efectivas quanto ao custo e tempo.</h1>
+                  <h1 class="title2">Criando soluções inovadoras e efectivas.</h1>
                 </div>
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
                   <a class="ready-btn right-btn page-scroll" href="#services">Ver Serviços</a>
-                  <a class="ready-btn page-scroll" href="#about">Saiba mais</a>
+                  <a class="ready-btn page-scroll" href="#about">Saiba mais...</a>
                 </div>
               </div>
             </div>
@@ -319,16 +320,16 @@ p, .p {
               <div class="slider-content">
                 <!-- layer 1 -->
                 <div class="layer-1-1 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
-                  <h2 class="title1">A melhor no ramo da informaçao</h2>
+                  <h2 class="title1">A melhor Gestão de Informações</h2>
                 </div>
                 <!-- layer 2 -->
                 <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                  <h1 class="title2">Ajudamos a sua empresa a alcançar todo o seu potencial.</h1>
+                  <h1 class="title2">Ajudamos a sua empresa a alcançar o seu maior potencial.</h1>
                 </div>
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
                   <a class="ready-btn right-btn page-scroll" href="#services">Ver Serviços</a>
-                  <a class="ready-btn page-scroll" href="#about">Saiba mais</a>
+                  <a class="ready-btn page-scroll" href="#about">Saiba mais...</a>
                 </div>
               </div>
             </div>
@@ -345,7 +346,7 @@ p, .p {
       <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="section-headline text-center">
-            <h2>Sobre a NMTSS</h2>
+            <h2>Sobre NMTSS</h2>
           </div>
         </div>
       </div>
@@ -365,30 +366,17 @@ p, .p {
           <div class="well-middle">
             <div class="single-well">
               <a href="#">
-                <h4 class="sec-head">A nossa missão</h4>
+                <h4 class="sec-head">Nossa missão</h4>
               </a>
-              <p>
-                Pautar sempre pela inovação, e prover serviços com padrões altos em qualidade, rigor, profissionalismo, integridade e dinamismo para satisfação das necessidades dos nossos clientes. 
+              <p style align="justify">
+               A nossa Missão prover serviços de Tecnologias da Informação e Comunicação com padrões altos de qualidade, pautando sempre pela inovação, rigor, profissionalismo, integridade e dinamismo para satisfação das necessidades dos nossos clientes.  
               </p>
-
-
 
              <h4 class="sec-head">A nossa História</h4>
               </a>
               <p>
-                <p>A NM Technology Services &amp; Solutions e uma empresa jovem que prov&ecirc; servi&ccedil;os de Tecnologias da Informa&ccedil;&atilde;o e Comunica&ccedil;&atilde;o (TIC). Foi criada em 2012 por <strong>Abdul Gafar Meque</strong>, CTO da empresa e no come&ccedil;o estava apenas virada para o desenvolvimento de p&aacute;ginas web, tendo como o primeiro cliente a empresa Tatos Bot&atilde;o.</p>
-<p>Posteriormente, merc&ecirc; de novos desafios na &aacute;rea das TICs, a NMTSS passou a oferecer diversos servi&ccedil;os al&eacute;m da cria&ccedil;&atilde;o de p&aacute;ginas web, nomeadamente:&nbsp;</p>
-<ol>
-<li>Consultoria virada para internet;</li>
-<li>Assist&ecirc;ncia e suporte inform&aacute;tico;</li>
-<li>Marketing Digital;</li>
-<li>Consultoria e Auditoria de Sistemas de Informa&ccedil;&atilde;o ou Tecnologias de Informa&ccedil;&atilde;o e Comunica&ccedil;&atilde;o;</li>
-<li>Repara&ccedil;&atilde;o e Manuten&ccedil;&atilde;o de Equipamentos Inform&aacute;ticos.</li>
-</ol>
-              </p>
-
-
-
+                <p style align="justify">A NM Technology Services & Solutions é uma empresa jovem que provê serviços de Tecnologias da Informação e Comunicação (TIC). Foi criada em 2012 por Abdul Gafar Meque, CTO da empresa e no começo estava apenas virada para o desenvolvimento de páginas web, tendo como o primeiro cliente a empresa Tatos Botão. 
+Posteriormente, mercê de novos desafios na área das TICs, a NMTSS passou a oferecer diversos serviços além de criação de páginas web. Veja abaixo os nossos serviços:&nbsp;</p>
             </div>
           </div>
         </div>
@@ -415,7 +403,7 @@ p, .p {
             <div class="card">
                 <div class="box-shadow bg-white rounded-circle mx-auto text-center" style="width: 90px; height: 90px; margin-top: -45px;"><i class="fa fa-globe fa-3x head-icon"></i></div>
                 <div class="card-body text-center">
-                    <h3 style="margin-top: 30px; margin-bottom: 30px" class="card-title pt-1">Consultoria virada para Internet</h3>
+                    <h3 style="margin-top: 30px; margin-bottom: 30px" class="card-title pt-1">Consultoria Virada Para Internet</h3>
 
                     <a class="btn btn-primary btn-sm collapsed" data-parent="#accordion" href="#servico1" data-toggle="collapse" href="#servico1" role="button" aria-expanded="false" aria-controls="servico1" style="margin-bottom: 30px;">saber mais</a>
 
@@ -424,10 +412,11 @@ p, .p {
                     <div class="card-text text-sm">
                 <ul>
 
-                  <li>Desenvolvimento de Softwares e Aplicacoes  ( Web, Mobile e Desktop)</li><br>
+                  <li>Desenvolvimento de Softwares e Aplicações (Web, Mobile e Desktop)</li><br>
                   <li>Desenvolvimento de Portais de Internet e Websites coorporativos</li><br>
-                  <li>Alojamento e aquisicao de Dominio de Internet</li><br>
-                  <li>Gestao de Manutencao de Paginas e Sistemas Web</li>
+                  <li>Alojamento e aquisição de Domínio de Internet</li><br>
+                  <li>Gestão de Manutenção de Páginas e Sistemas Web</li>
+
                   <br><br><br><br>
                 </ul>
               </div>
@@ -442,7 +431,7 @@ p, .p {
             <div class="card">
                 <div class="box-shadow bg-white rounded-circle mx-auto text-center" style="width: 90px; height: 90px; margin-top: -45px;"><i class="fa fa-headset fa-3x head-icon"></i></div>
                 <div class="card-body text-center">
-                    <h3 style="margin-top: 30px; margin-bottom: 30px" class="card-title pt-1">Assistência e suporte informático</h3>
+                    <h3 style="margin-top: 30px; margin-bottom: 30px" class="card-title pt-1">Assistência e Suporte Informático</h3>
 
                     <a class="btn btn-primary btn-sm collapsed" data-toggle="collapse" href="#servico2" role="button" aria-expanded="false" aria-controls="servico2" style="margin-bottom: 30px;">saber mais</a>
 
@@ -452,16 +441,14 @@ p, .p {
 
                         <ul>
 
-                    <p><em>Instalação, configuração, manutenção e identificação / resolução de problemas em: </em></p><br>
-                    <li>Redes de computadores e comunicações</li> <br>
-                    <li>Segurança (firewalls, VPN’s, VLAN’s, routing, proxy’s) </li> <br>
-                    <li>Servidores e postos de trabalho</li> <br>
-                    <li>Sistemas operativos Windows / MAC / Linux / HP-UX</li> <br>
-                    <li>Soluções de backups e disaster recovery.</li>
+                    <p><em>Instalação, configuração, manutenção e identificação/resolução de problemas em: </em></p><br>
+                    <li>Redes de computadores e Comunicações</li> <br>
+                    <li>Segurança (Firewalls, VPN’s, VLAN’s, Routing, Proxy’s) </li> <br>
+                    <li>Servidores e Postos de Trabalho</li> <br>
+                    <li>Sistemas Operativos Windows / MAC / Linux / HP-UX</li> <br>
+                    <li>Soluções de Backups e Disaster Recovery.</li>
                     <br><br>
                        </ul>
-
-
 
                     </div>
                 </div>
@@ -469,13 +456,11 @@ p, .p {
             </div>
         </div>
 
-
-
         <div class="col-lg-4 col-sm-6 mb-30 pb-5" style="margin-bottom: 70px;">
             <a class="card" >
                 <div class="box-shadow bg-white rounded-circle mx-auto text-center" style="width: 90px; height: 90px; margin-top: -45px;"><i class="fa fa-chart-line fa-3x head-icon"></i></div>
                 <div class="card-body text-center">
-                    <h3 style="margin-top: 30px; margin-bottom: 30px" class="card-title pt-1">Consultoria de gestão</h3>
+                    <h3 style="margin-top: 30px; margin-bottom: 30px" class="card-title pt-1">Consultoria de Gestão</h3>
 
                     <button class="btn btn-primary btn-sm" data-toggle="collapse" href="#servico3" role="button" aria-expanded="false"  aria-controls="servico3" style="margin-bottom: 30px;">saber mais</button>
 
@@ -491,7 +476,6 @@ p, .p {
                       <li >Auxílio na elaboração de demonstrações financeiras para publicação ou para encaminhamento a terceiros (bancos, órgãos governamentais, etc).</li><br>
                       <li >Elaboração de Relatório de Contas.</li>
                     </ul>
-
 
 
                     </div>
@@ -519,10 +503,11 @@ p, .p {
 
 
                 <ul>
-            <li>Estudo e desenho de logotipos.</li><br>
+            <li>Estudo e desenho de logotipos, Lettermarks, Símbolos ou Ícones, Wordmark, Combination Mark e Emblemas.</li><br>
             <li >Elaboração de envelopes, cartões e folhas de carta, com recurso a meios informáticos.</li><br>
             <li >Estudo de decoração de viaturas.</li><br>
-            <li >Elaboração de planos de marketing e publicidade orientados para o mercado alvo seleccionado.</li><br>
+            <li >Elaboração de planos de marketing e publicidade orientados para o mercado alvo.</li><br>
+            <li >Elaboração de perfis empresariais.</li><br>
             <li >Estudo de implantação dos produtos nos estabelecimentos comerciais.</li><br>
             <li >Organização e decoração de estabelecimentos comerciais.</li><br>
             <li >Análise de estudos de mercado.</li>
@@ -554,17 +539,16 @@ p, .p {
                     <ul>
 
                       <li>Contabilidade Geral e Analítica.</li><br>
-                      <li>Custos e Gestão de estoques.</li><br>
+                      <li>Custos e Gestão de Estoques.</li><br>
                       <li>Administração do Activo Imobilizado.</li><br>
                       <li>Psicossociologia das organizações.</li><br>
-                      <li>Gestão e rentabilização dos recursos humanos na empresa.</li><br>
-                     <li>Pacote Office (Word, Excel, Powerpoint, Outlook, Access, Infopath).</li><br>
-                      <li>Programacao e Desenvolvimento de Softwares.</li><br>
+                      <li>Gestão e Rentabilização dos Recursos Humanos na empresa.</li><br>
+                     <li>Pacotes Office (Word, Excel, Powerpoint, Outlook, Access, Infopath).</li><br>
+                      <li>Programação e Desenvolvimento de Softwares.</li><br>
                       <li>Bases de Dados (Access, SQL Server, ORACLE).</li><br>
                       <li>Redes e Segurança.</li><br>
-                      <li>Lingua (Portugues e Ingles).</li>
+                      <li>Lingua (Português e Inglês).</li>
                     </ul>
-
 
 
                     </div>
@@ -577,7 +561,7 @@ p, .p {
             <a class="card" href="#">
                 <div class="box-shadow bg-white rounded-circle mx-auto text-center" style="width: 90px; height: 90px; margin-top: -45px;"><i class="fa fa-chart-pie fa-3x head-icon"></i></div>
                 <div class="card-body text-center">
-                    <h3 style="margin-top: 30px; margin-bottom: 30px" class="card-title pt-1">Consultoria e auditoria em SI/TI</h3>
+                    <h3 style="margin-top: 30px; margin-bottom: 30px" class="card-title pt-1">Consultoria e Auditoria em SI/TI</h3>
 
                     <button class="btn btn-primary btn-sm" data-toggle="collapse" href="#servico6" role="button" aria-expanded="false" data-parent="#accordion" aria-controls="servico6" style="margin-bottom: 30px;">saber mais</button>
 
@@ -592,15 +576,8 @@ p, .p {
                       <li>Custos e Gestão de estoques.</li><br>
                       <li>Administração do Activo Imobilizado.</li><br>
                       <li>Psicossociologia das organizações;</li><br>
-                      <li>Gestão e rentabilização dos recursos humanos na empresa;</li><br>
-                     <li>Pacote Office (Word, Excel, Powerpoint, Outlook, Access, Infopath).</li><br>
-                      <li>Programacao e Desenvolvimento de Softwares.</li><br>
-                      <li>Bases de Dados (Access, SQL Server, ORACLE).</li><br>
                       <li>Redes e Segurança.</li><br>
-                      <li>Lingua ( Portugues e Ingles).</li>
                     </ul>
-
-
 
 
                     </div>
@@ -610,8 +587,6 @@ p, .p {
         </div>
 
 </div>
-
-
 
 
     </div>
@@ -636,9 +611,9 @@ p, .p {
           <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="wellcome-text">
               <div class="well-text text-center">
-                <h2>Inscreva-se na nossa newsteller</h2>
+                <h2>Inscreva-se na nossa Newsteller</h2>
                 <p>
-                 Receba emails com as promoções, servicos, e ultimas novidades da comunidade NNTSS.
+                 Receba e-mails com as promoções, serviços, e últimas novidades da comunidade NNTSS.
                 </p>
                 <div class="subs-feilds">
                   <div class="suscribe-input">
@@ -663,7 +638,7 @@ p, .p {
       <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="section-headline text-center">
-            <h2>Conheça  a nossa equipa:</h2>
+            <h2>Conheça nossa equipa</h2>
           </div>
         </div>
       </div>
@@ -1004,7 +979,8 @@ p, .p {
                 <i class="fa fa-mobile"></i>
                 <p>
                   Chamada: +258 23 36 44 69 / <br>
-                  <span>Segunda-Sexta (8h-17h)</span>
+                  <span>
+                  </span>
                 </p>
               </div>
             </div>
@@ -1027,7 +1003,7 @@ p, .p {
               <div class="single-icon">
                 <i class="fa fa-map-marker"></i>
                 <p>
-                  Localização: Av. Capitao Pereira do Lago, 336, Matacuane<br>
+                  Localização: Av. Capitão Pereira do Lago, n<sup>o</sup> 336, Matacuane<br>
                   <span>Beira, Moçambique</span>
                 </p>
               </div>
@@ -1049,7 +1025,7 @@ p, .p {
           <div class="col-md-6 col-sm-6 col-xs-12">
             <div class="form contact-form">
               <div id="sendmessage">A sua Mensagem foi enviada. Obrigado!</div>
-              <div id="errormessage">Ocorreu um erro ao enviar. Tente de novo</div>
+              <div id="errormessage">Ocorreu um erro ao enviar. Tente de novo.</div>
               <form action="" method="post" role="form" class="contactForm">
                 <div class="form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
@@ -1119,9 +1095,9 @@ p, .p {
                 <h4>informações</h4>
 
                 <div class="footer-contacts">
-                  <p><span>Cel: </span> +258 87 67 37 784 </p>
+                  <p><span>Cel: </span> +258 87 673 7784 </p>
                   <p><span>Email: </span>info@nmtss.net</p>
-                  <p><span>Horario de atendimento: </span>8h-17h</p>
+                  <p><span>Horário de atendimento: </span>08 às 17 horas</p>
                 </div>
               </div>
             </div>
@@ -1130,7 +1106,7 @@ p, .p {
           <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="footer-content">
               <div class="footer-head">
-                <h4>Portfolio</h4>
+                <h4>Portfólio</h4>
                 <div class="flicker-img">
                   <a href="#"><img src="img/portfolio/musicapromo.png" alt=""></a>
                   <a href="#"><img src="img/portfolio/sociomatico.png" alt=""></a>
@@ -1149,12 +1125,12 @@ p, .p {
           <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="copyright text-center">
               <p>
-                &copy; Copyright <strong>NM Technology Services & Solutions - 2019</strong>. All Rights Reserved
+                &copy; Copyright <strong>NM Technology Services & Solutions - 2019</strong>. Todos os Direitos Reservados
               </p>
             </div>
             <div class="credits">
 
-              Designed by <a href="https://nmtss.net/">NM Technology Services & Solutions</a>
+              Desenvolvido pela <a href="https://nmtss.net/">NM Technology Services & Solutions</a>
             </div>
           </div>
         </div>
